# imonitor

./: .gitignore  Cargo.toml  README.en.md  README.md  README.zh-CN.md
app/: __init__.py  config.py  main.py  storage.py
public/: index.html
scripts/: agent  agent.py  i-mo  install-panel.sh  install.sh  setup.sh
src/: main.rs
